<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_board_blue_gradient"
        tools:context=".ui.main.CoryatFinalJeopardyRoundFragment">

        <TextView
            android:id="@+id/casual_fj_title_tv"
            style="@style/fj_title_tv"
            android:text="@string/value_fj_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <EditText
            android:id="@+id/casual_fj_wager_et"
            style="@style/wager_et"
            android:layout_marginTop="64dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_fj_title_tv" />

        <RadioGroup
            android:id="@+id/casual_fj_rg"
            style="@style/fj_radio_btn_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_fj_wager_et"
            app:layout_constraintVertical_bias="0.13999999">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/casual_fj_incorrect_radio_btn"
                style="@style/fj_incorrect_radio_btn"
                android:text="@string/fj_incorrect_btn_string" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/casual_fj_correct_radio_btn"
                style="@style/fj_correct_radio_btn"
                android:text="@string/fj_correct_btn_string" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>