<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.randoworks.coryatkeeper.ui.main.CoryatScorekeeperViewModel" />

        <variable
            name="handler"
            type="com.randoworks.coryatkeeper.ui.main.FJRoundHandler" />
    </data>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_board_blue_gradient"
        tools:context=".ui.main.CoryatFinalJeopardyRoundFragment">

        <TextView
            android:id="@+id/coryat_fj_title_tv"
            style="@style/fj_title_tv"
            android:text="@string/value_fj_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <RadioGroup
            android:id="@+id/coryat_fj_radio_group"
            style="@style/fj_radio_btn_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coryat_fj_title_tv"
            app:layout_constraintVertical_bias="0.19">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/coryat_fj_incorrect_radio_btn"
                style="@style/fj_incorrect_radio_btn"
                android:onClick="@{() -> handler.setFJStatusIncorrect()}"
                android:text="@string/fj_incorrect_btn_string" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/coryat_fj_correct_radio_btn"
                style="@style/fj_correct_radio_btn"
                android:onClick="@{() -> handler.setFJStatusCorrect()}"
                android:text="@string/fj_correct_btn_string" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>