<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_board_blue_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_200_btn"
            style="@style/decrease_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_200_tv"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_200_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_200_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_400_btn"
            style="@style/decrease_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_400_tv"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_400_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_400_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_600_btn"
            style="@style/decrease_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_600_tv"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_600_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_600_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_800_btn"
            style="@style/decrease_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_800_tv"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_800_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_800_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_1000_btn"
            style="@style/decrease_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_1000_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_decrease_dd_btn"
            style="@style/decrease_score_btn"
            android:text="@string/coryat_dd_miss_btn_string"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_wager_et"
            app:layout_constraintEnd_toStartOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_wager_et" />

        <TextView
            android:id="@+id/casual_j_value_200_tv"
            style="@style/clue_value_tv"
            android:layout_marginTop="24dp"
            android:text="@string/value_200_tv_string"
            app:layout_constraintBottom_toTopOf="@+id/casual_j_value_400_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/casual_j_value_400_tv"
            style="@style/clue_value_tv"
            android:text="@string/value_400_tv_string"
            app:layout_constraintBottom_toTopOf="@+id/casual_j_value_600_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_j_value_200_tv" />

        <TextView
            android:id="@+id/casual_j_value_600_tv"
            style="@style/clue_value_tv"
            android:text="@string/value_600_tv_string"
            app:layout_constraintBottom_toTopOf="@+id/casual_j_value_800_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_j_value_400_tv" />

        <TextView
            android:id="@+id/casual_j_value_800_tv"
            style="@style/clue_value_tv"
            android:text="@string/value_800_tv_string"
            app:layout_constraintBottom_toTopOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_j_value_600_tv" />

        <TextView
            android:id="@+id/casual_j_value_1000_tv"
            style="@style/clue_value_tv"
            android:text="@string/value_1000_tv_string"
            app:layout_constraintBottom_toTopOf="@+id/casual_j_value_wager_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_j_value_800_tv" />

        <EditText
            android:id="@+id/casual_j_value_wager_et"
            style="@style/wager_et"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casual_j_value_1000_tv" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_200_btn"
            style="@style/increase_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_200_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_200_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_200_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_400_btn"
            style="@style/increase_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_400_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_400_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_400_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_600_btn"
            style="@style/increase_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_600_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_600_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_600_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_800_btn"
            style="@style/increase_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_800_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_800_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_800_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_1000_btn"
            style="@style/increase_score_btn"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_800_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_1000_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/casual_j_increase_dd_btn"
            style="@style/increase_score_btn"
            android:text="@string/coryat_dd_correct_btn_string"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/casual_j_value_wager_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/casual_j_value_1000_tv"
            app:layout_constraintTop_toTopOf="@+id/casual_j_value_wager_et" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


